--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,8 @@
     "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "radix-ui": "^1.4.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.71.2",
     "tailwind-merge": "^3.5.0",
     "zod": "^4.3.6"
