feat: add unit tests and minor changes to frontend

--- a/user-service/.env.example
+++ b/user-service/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://admin:<db_password>@peerprep11cluster.rxjx5z2.mongodb.net/?appName=PeerPrep11Cluster
+MONGODB_URI=put_uri_here
 JWT_SECRET=change_this_to_a_long_random_secret
 JWT_EXPIRES_IN=7d
 FRONTEND_ORIGIN=http://localhost:3000
